--- a/package.json
+++ b/package.json
@@ -8,32 +8,30 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.9",
+    "@whiskeysockets/baileys": "^6.7.21",
+    "@hapi/boom": "^10.0.1",
     "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "^1.0.0",
     "express": "^4.18.2",
     "ffmpeg-static": "^5.2.0",
+    "file-type": "^16.5.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.2.0",
-    "jimp": "^0.22.12",
+    "google-translate-api-x": "^10.7.1",
+    "jimp": "^1.6.0",
+    "mathjs": "^12.4.1",
+    "mime-types": "^2.1.35",
+    "moment": "^2.30.1",
     "node-cache": "^5.1.2",
+    "node-fetch": "^2.7.0",
     "pino": "^8.17.2",
     "pino-pretty": "^10.3.1",
+    "puppeteer-core": "^21.7.0",
     "qrcode": "^1.5.3",
     "sharp": "^0.33.2",
-    "socket.io": "^4.6.1",
-    "node-fetch": "^2.7.0",
-    "@hapi/boom": "^10.0.1",
-    "moment": "^2.30.1",
-    "readline": "^1.3.0",
+    "socket.io": "^4.7.2",
     "wa-sticker-formatter": "^4.4.2",
-    "youtubei.js": "^9.1.0",
-    "puppeteer-core": "^21.7.0",
-    "google-translate-api-x": "^10.7.1",
-    "file-type": "^16.5.4",
-    "mime-types": "^2.1.35",
-    "mathjs": "^12.4.1",
-    "crypto": "^1.0.1"
+    "youtubei.js": "^9.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
